# nix-github-actions

./: .editorconfig  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  result  rustfmt.toml
.github/workflows/: nix.yml  no-nix.yml
nix/: ci.nix
src/: main.rs
