[package]
name = "todos"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.16"
hyper = { version = "0.14.20", features = ["client"] }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.15"
